# ChangeLog for games-puzzle/pauker
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pauker/ChangeLog,v 1.29 2010/02/09 21:23:47 josejx Exp $

  09 Feb 2010; Joseph Jezak <josejx@gentoo.org> pauker-1.8.ebuild:
  Marked ppc stable for bug #295517.

  19 Dec 2009; Pacho Ramos <pacho@gentoo.org> pauker-1.8.ebuild:
  amd64 stable, bug 295517

  09 Dec 2009; Christian Faulhammer <fauli@gentoo.org> pauker-1.8.ebuild:
  stable x86, bug 295517

  03 Dec 2009; Michael Sterrett <mr_bones_@gentoo.org> pauker-1.8.ebuild:
  make_desktop_entry for bug #222281

  13 Oct 2009; Vlastimil Babka <caster@gentoo.org> pauker-1.8.ebuild:
  Fix building - bug #288915.

*pauker-1.8 (11 Oct 2009)

  11 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org> +pauker-1.8.ebuild:
  version bump

  26 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  pauker-1.8_rc6.ebuild:
  EAPI=2

*pauker-1.8_rc6 (24 Nov 2008)

  24 Nov 2008; Alistair Bush <ali_bush@gentoo.org>
  +files/pauker_bundledjars.patch, +pauker-1.8_rc6.ebuild:
  Version Bump.

  02 Jul 2008; Brent Baude <ranger@gentoo.org> pauker-1.7.5-r1.ebuild:
  stable ppc, bug 229235

  24 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  pauker-1.7.5-r1.ebuild:
  stable x86, bug 229235

  24 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> pauker-1.7.5-r1.ebuild:
  amd64 stable, bug #229235

*pauker-1.7.5-r1 (25 Jan 2008)

  25 Jan 2008; Robin H. Johnson <robbat2@gentoo.org>
  +pauker-1.7.5-r1.ebuild:
  Revbump for lucene slot move.

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> pauker-1.7.5.ebuild:
  Added ~ppc, bug #180291

*pauker-1.7.5 (29 May 2007)

  29 May 2007; Tristan Heaven <nyhm@gentoo.org> +pauker-1.7.5.ebuild:
  Version bump, bug #180243

*pauker-1.7.4 (09 Mar 2007)

  09 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org> +pauker-1.7.4.ebuild:
  version bump

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.
