@@ -1,5 +1,15 @@
-AUX pauker_bundledjars.patch 899 RMD160 2dfb45876ad107e537636c0b9715950781255c6d SHA1 e6afd877dc81f25689c79eb6393c4dacf1a6adc5 SHA256 4853a7e49a247d700fcac224363acf859b185fe64633b3c06fa9d66b0709e2bf
-DIST pauker-1.8.src.jar 33886665 RMD160 d4e63b820228df08cd3501c4d445b93dcf268197 SHA1 38fe32a3d08f48c7179eafd98c1a0942b93da6b4 SHA256 061be727408413696d148285d268a2cb37262a19d6d8a26b67d2233507545e05
-EBUILD pauker-1.8.ebuild 1911 RMD160 0da36f8a2a494eeb4a3c83b93524702ee66a6629 SHA1 8318216d5f5e9f7964c62d4996b67efced9e3c89 SHA256 d0ba08a7a8c297ff1e45f1fe9f8cf3f902896f981e2ae666ac5741d9a56fe0cd
-MISC ChangeLog 3429 RMD160 c35d283896777b856c300d669c8f7d63eda08396 SHA1 6822d06308824b820c4558e62d208f055e344de4 SHA256 6a7a229644e7dab81500c088d1d142885563af98518389c970346b5e5178166f
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX pauker_bundledjars.patch 899 SHA256 4853a7e49a247d700fcac224363acf859b185fe64633b3c06fa9d66b0709e2bf SHA512 ed7d47165871488233bcf032bf7e93f7988a231251fa93dbf173774dcaecee1adb735930fbface4009a72912db3f811a09cb9e49a038e7c01fda9a44e8515a22 WHIRLPOOL f107f86dfec77e6e5d3a95c25cb935f670d4a6ffcd1f7a562955977c46931e3cb0011fe3ec2c686510c2816f1f61661da6f266fcd2b26716bed26f3a122175da
+DIST pauker-1.8.src.jar 33886665 SHA256 061be727408413696d148285d268a2cb37262a19d6d8a26b67d2233507545e05 SHA512 2d329571e857a05116ba499c4bd82669f0c99a748ca375ab06e701492a814b97fcc09bbf0ae4f48c52b05c67768a14d70a4217fee9680762424c96ab7f4341ae WHIRLPOOL fc3e6cbcc0164656337002e89f880b4f1f075892f62ef561deb25671b764f25872e438d54cf72e1ff701e0b8c9ceab621027d9b360eed65f2d3d23682f8d20e5
+EBUILD pauker-1.8.ebuild 1911 SHA256 3ddab87736c895074a4dbff3a5cc46251e9d62f0fa5bac84b4acca6d1bd21b54 SHA512 04a841679fbd8f5c00ba607ba80fda04e06c0f82838884553378824fc1f3257ea9b6cfc5d47b3daaaa1e37878f685112908e7fc5f6249de4f7ab4585c74122b1 WHIRLPOOL 7a2773e86a0287ce8853fa12b414fd114795d4abf228cbecae809c3907a50fb99051ee7c95aab818f2ffb3ad10d221b52b5f4876f9fcb859a98c0529727ae232
+MISC ChangeLog 3508 SHA256 5e476baedf48acf04a891c34f26fcc0a0ce61b9134b3896c3a9767a902f40365 SHA512 f6b35674e7cbda89d45b26862a9aff0de72db9ea634b4982c7d3ec1b9fab82f8c6834874b9ed88b2f55c3257268d2adfeac317542c371877d58a39b87ea2ba59 WHIRLPOOL 133e1ed54df9ec80a5424943e536a7548159ae2f17c4b9bdd9510d0787c570725c1459ee6f60c0dcfdebb8edb48ae2a241f9c28f288d4ef287726147f85c748b
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTqQr8ACgkQIY77eQFFFC3CwQCeJXdTifsS+7lR8OpBHHmxQLcm
+jngAoN3Mv7yT8HS8WCuEp+63a4gQKEAt
+=MNac
+-----END PGP SIGNATURE-----
