@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pauker/pauker-1.8.ebuild,v 1.6 2010/02/09 21:23:47 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pauker/pauker-1.8.ebuild,v 1.7 2015/02/22 20:57:34 tupone Exp $
 
-EAPI=2
+EAPI=5
 JAVA_PKG_IUSE="doc source"
 inherit eutils java-pkg-2 java-ant-2 games
 
